--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <h1>First HTML 5 Document</h1>
-<h2>Availble on the web</h2>
+<h2>Available on the web</h2>
 <p>I am reading this book to develop websites that can be accessed from any device and can serve as cross platform apps <br>
 The devices I will test will be running the following operarting systems: <br>
 <br>
